--- a/Source/app/build.gradle
+++ b/Source/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.mahan.randommoviespinner"
+        applicationId "com.mahan.randomo"
         minSdkVersion 22
         targetSdkVersion 29
         versionCode 1
