--- a/Source/app/build.gradle
+++ b/Source/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.google.android.gms:play-services-ads:19.6.0'
 
 }
